minor bug updated
- fixed the buttons at the top
- style changes (more uniform style)
- fixed background issues not showing up on inquiry form

--- a/main.css
+++ b/main.css
@@ -46,13 +46,20 @@ h1 {
 }
 
 .background-container {
-    margin-top: 0%;
+    position: relative;
+    width: 100%;
+    height: 100vh; 
+    overflow: hidden;
+}
+.background-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background: url("background_img1.jpg");
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
+    background: url("background_img1.jpg") center center / cover no-repeat; /* Use the shorthand background property */
+    z-index: -1;
 }
 
 .dimmed-overlay {
@@ -102,17 +109,21 @@ h1 {
     margin: 0 4% 0 4%;
     padding: 0 2% 0 2%;
     width: max-content;
+    transition: padding 0.3s;
+    box-sizing: border-box;
 }
 
 .option:hover {
     cursor: pointer;
-    color: rgb(134, 205, 229);
+    color: rgb(134, 229, 137);
     background-color: rgba(255, 255, 255, 0.2);
     padding: 0 4% 0 4%;
+    border: 2px transparent solid;
+    width: max-content;
 }
 
 .associated-orgs-text {
-    font-size: 1vw;
+    font-size: 2px;
     margin-top: 2%;
 }
 
